--- a/idex.html
+++ b/idex.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -133,7 +132,7 @@
       </section>
       <!-- mapa -->
       <section class="fullscreen-section">
-        <img src="imagenes/mapa.png" alt="Mapa Mercedes" class="background-image">
+        <img src="imagenes/mapa.png" alt="Mapa mundo de noche" class="background-image">
         <div class="overlay-content">
           <h2>Discover your<br>local Mercedes<br>partner store</h2>
           <button class="transparent-button">Find a partner store near you</button>
