--- a/idex.html
+++ b/idex.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="gama de vehículos Mercedes-Benz, lujo, tecnología">
+    <meta name="keywords" content="Mercedes-Benz, autos de lujo, eléctricos,Mercedes Maybach" >
     <title>Mercedes Benz</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -40,14 +43,14 @@
     </nav>
   </header>
   
-  
+  <main>
     <!-- destacado o Hero -->
     <section class="destacado">
       <div class="textodestacado">
           <h1>New Mercedes CLS</h1>
           <p>The power in your hands</p>
       </div>
-      <div class="image-container">
+      <div class="image-containerer">
           <img src="imagenes/PORTADA.jpg" alt="Mercedes CLS" class="destacadoimg">
       </div>
   </section>
@@ -216,6 +219,7 @@
           <a href="#" class="cta-button">Contact Now</a>
         </div>
       </section>
+  </main>
       <!-- footer -->
       <footer class="footer">
         <div class="footer-top">
@@ -229,12 +233,12 @@
               placeholder="Enter your email address here"
               class="footer-input"
               required
-            />
+            >
             <button type="submit" class="footer-submit">Subscribe</button>
           </form>
           <!-- Checkbox -->
           <div class="footer-terms">
-            <input type="checkbox" id="agree" />
+            <input type="checkbox" id="agree" >
             <label for="agree">By signing up, I agree to the <a href="#">privacy policy</a>.</label>
           </div>
           <!-- Redes sociales -->
