--- a/idex.html
+++ b/idex.html
@@ -8,6 +8,7 @@
     <title>Mercedes Benz</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<!--     no he conseguido crear una carpeta con las imagenes, es necesario crearla para enlazar el codigo -->
 <body>
   <header>
     <nav class="barranavegacion">
